# debmake-doc

./: .gitignore  Makefile  Makefile.common  Makefile.dbk  Makefile.pkg  README.source  nopdf.tex
asciidoc/: 00-terms.txt  01-preface.txt  02-overview.txt  10-prereq.txt  12-setups.txt  14-simpledeb.txt  20-workflow.txt  21-version.txt  22-rules.txt  23-control.txt  24-boption.txt  25-changelog.txt  26-copyright.txt  27-debconfig.txt  27-patches.txt  28-gpg.txt  29-debconfig.txt  30-customize.txt  31-build.txt  32-debug.txt  33-lib.txt  34-multiarch.txt  34-symbols.txt  35-multiarch.txt  35-symbols.txt  36-harden.txt  36-multiarch.txt  37-bug.txt  37-debconf.txt  37-harden.txt  38-pkgtest.txt  39-bootstrap.txt  3z-bug.txt  40-aioption.txt  41-dtoption.txt  41-pymod.txt  42-dtoption.txt  42-pymod.txt  43-coption.txt  44-koption.txt  (+42 more)
debhello-0.0/: Makefile
debhello-0.0-pkg1/: step202.cmd  step702.cmd
debhello-0.0-pkg2/: step120.cmd  step301.cmd  step304.cmd  step308.cmd  step499.cmd
debhello-0.0-pkg3/: step301.cmd  step304.cmd  step305.cmd
debhello-0.0-pkg4/: step101.cmd  step300.cmd  step301.cmd  step302.cmd  step303.cmd  step310.cmd  step340.cmd  step350.cmd  step351.cmd
debhello-0.0/debian/: changelog
debhello-0.0/debian/source/: local-patch-header
debhello-0.0/src/: hello.c
debhello-0.1-pkg1/: step000.cmd  step200.cmd
debhello-0.1/debian/: changelog
debhello-0.2-pkg1/: step303.cmd  step304.cmd
debhello-0.2/data/: hello.desktop
debhello-0.2/debian/: changelog  control  install  manpages  watch
debhello-0.2/man/: hello.1
debhello-0.2/scripts/: hello
debhello-0.3/: Makefile
debhello-0.3-pkg1/: step200.cmd  step201.cmd  step204.cmd  step303.cmd  step304.cmd  step305.cmd  step499.cmd  step700.cmd  step702.cmd
debhello-0.3/debian/: changelog  control  rules
debhello-0.3/src/: hello.c
debhello-1.0/: Makefile
debhello-1.0-pkg1/: step200.cmd  step301.cmd  step390.cmd
debhello-1.0/debian/: changelog  control
debhello-1.1/: PKG-INFO  setup.py
debhello-1.1-pkg1/: step101.cmd  step103.cmd  step303.cmd  step702.cmd
debhello-1.1/debian/: changelog  control  hello.desktop  install  manpages
debhello-1.1/debian/source/: include-binaries
debhello-1.1/hello_py/: __init__.py
debhello-1.2-pkg1/: step102.cmd  step309.cmd
debhello-1.2/data/: hello.desktop
debhello-1.2/debian/: changelog  control
debhello-1.2/scripts/: hello
debhello-1.3/: MANIFEST.in  setup.py
debhello-1.3-pkg1/: step104.cmd
debhello-1.3/data/: hello.desktop
debhello-1.3/debian/: changelog  control
debhello-1.3/hello_py/: __init__.py
debhello-1.4/: Makefile
debhello-1.4-pkg1/: step000.cmd  step102.cmd
debhello-1.4/debian/: changelog  rules
debhello-1.4/src/: config.h  hello.c
debhello-1.5/: Makefile.in  configure
debhello-1.5-pkg1/: step102.cmd  step103.cmd  step200.cmd
debhello-1.5/debian/: changelog  rules
debhello-1.6/: configure.ac
debhello-1.6-pkg1/: step103.cmd
debhello-1.6/debian/: changelog  control  rules
debhello-1.6/man/: Makefile.am
debhello-1.6/src/: hello.c
debhello-1.7/: CMakeLists.txt
debhello-1.7/debian/: changelog  control  rules
debhello-1.7/src/: CMakeLists.txt  config.h.in
debhello-2.0/: Makefile.am  configure.ac
debhello-2.0-pkg1/: step102.cmd  step200.cmd  step390.cmd  step700.cmd
debhello-2.0-pkg2/: step000.cmd  step103.cmd  step150.cmd  step151.cmd  step152.cmd  step153.cmd  step154.cmd  step155.cmd  step156.cmd  step157.cmd  step158.cmd  step160.cmd  step161.cmd  step170.cmd  step190.cmd  step200.cmd  step202.cmd  step203.cmd  step300.cmd  step301.cmd  step302.cmd  step303.cmd  step304.cmd  step390.cmd  step399.cmd  step400.cmd  step499.cmd  step500.cmd
debhello-2.0/debian/: changelog  control  libsharedlib1.symbols  rules
debhello-2.0/man/: hello.1
debhello-2.0/src/: Makefile.am
debhello-2.1/: CMakeLists.txt
debhello-2.1-pkg1/: step303.cmd  step500.cmd
debhello-2.1-pkg2/: step103.cmd  step200.cmd  step301.cmd  step302.cmd  step305.cmd  step701.cmd
debhello-2.1/debian/: changelog  control  libsharedlib-dev.install  rules
debhello-2.1/lib/: CMakeLists.txt  sharedlib.c
debhello-2.1/src/: CMakeLists.txt  config.h.in  hello.c
debhello-3.0/: Makefile
debhello-3.0-pkg1/: step101.cmd  step104.cmd
debhello-3.0/debian/: changelog  control  rules
debhello-3.0/po/: Makefile  ja.po
debhello-3.0/scripts/: hello
debhello-3.1/: MANIFEST.in  setup.cfg  setup.py
debhello-3.1-pkg1/: step102.cmd  step104.cmd  step200.cmd  step303.cmd
debhello-3.1/data/: hello.desktop.in
debhello-3.1/debian/: changelog  control
debhello-3.1/hello_py/: __init__.py
debhello-3.1/po/: POTFILES.in  ja.po
debhello-3.1/scripts/: hello
debhello-3.2/: LICENSE  Makefile.in  configure
debhello-3.2-pkg1/: step600.cmd
debhello-3.2/debian/: changelog  rules
debhello-3.2/po/: Makefile  ja.po
debhello-3.2/src/: hello.c
debhello-3.3/: Makefile.am  configure.ac.new
debhello-3.3-pkg1/: step102.cmd  step105.cmd  step106.cmd
debhello-3.3/debian/: changelog  control  debhello.install  libsharedlib1.symbols  rules
debhello-3.3/lib/: Makefile.am  sharedlib.c
debhello-3.3/man/: Makefile.am
debhello-3.3/po/: ChangeLog  Makevars  POTFILES.in  fr.po
debhello-3.3/src/: Makefile.am  hello.c
debhello-3.4/: CMakeLists.txt
debhello-3.4-pkg1/: step102.cmd  step104.cmd  step299.cmd  step702.cmd
debhello-3.4/data/: CMakeLists.txt  hello.desktop.in
debhello-3.4/debian/: changelog  control  copyright  rules
debhello-3.4/debian/patches/: series
debhello-3.4/lib/: sharedlib.h
debhello-3.4/man/: CMakeLists.txt
debhello-3.4/po/: CMakeLists.txt  ja.po
debhello-3.4/src/: CMakeLists.txt  config.h.in  hello.c
debian/: changelog  control  copyright  debmake-doc.lintian-overrides  doc-base  rules  watch
debian-template/: Makefile  README.Debian  changelog  split-changes
debian/source/: lintian-overrides
po/: de.po  ja.po  ru.po  zh-cn.po  zh_CN.po
xslt/: dblatex.xsl  debian.css  docbook.its  modappendix.xsl  style-epub.xsl  style-html.xsl  style-txt.xsl  urls.xsl  user_param.xsl  xetex_param.xsl
(+1 files in other folders)
